accept relative file path as config location in importer